--- a/client/src/App.css
+++ b/client/src/App.css
@@ -1,7 +1,11 @@
-/* .App {
-  text-align: center;
+
+.App {
+  padding-top: 50px;
+  height: 100%;
+  width: 100%;
 }
 
+/* 
 .App-logo {
   height: 40vmin;
   pointer-events: none;
