--- a/client/src/index.css
+++ b/client/src/index.css
@@ -4,7 +4,8 @@
   box-sizing: border-box;
 }
 body {
-  background: #1C8EF9 !important;
+  background-color: #013A6B;
+  background-image: -webkit-linear-gradient(30deg, #013A6B 50%, #004E95 50%);
   min-height: 100vh;
   display: flex;
   font-weight: 400;
