--- a/client/src/profile.css
+++ b/client/src/profile.css
@@ -1,3 +1,12 @@
+@import url('https://fonts.googleapis.com/css2?family=Merriweather+Sans:wght@500&display=swap');
+
+
+:root {
+  --background: #E4FFF7;
+  --shadow: #34312d;
+  --text: #485696;
+}
+
 .grid-container {
     display: grid;
     grid-template-columns: auto auto;
@@ -13,6 +22,15 @@
   }
 
   .welcome {
-
-    color: green
+    padding-top: 20px;
+    text-align: center;
+    font-family: 'Merriweather Sans', sans-serif;    
+    color: var(--text);
+  text-shadow: 6px 6px var(--shadow),
+    5px 5px var(--shadow), 5.5px 5.5px var(--shadow), 5.25px 5.25px var(--shadow), 5.75px 5.75px var(--shadow),
+    4px 4px var(--shadow), 4.5px 4.5px var(--shadow), 4.25px 4.25px var(--shadow), 4.75px 4.75px var(--shadow),
+    3px 3px var(--shadow), 3.5px 3.5px var(--shadow), 3.25px 3.25px var(--shadow), 3.75px 3.75px var(--shadow),
+    2px 2px var(--shadow), 2.5px 2.5px var(--shadow), 2.25px 2.25px var(--shadow), 2.75px 2.75px var(--shadow),
+    1px 1px var(--shadow), 1.5px 1.5px var(--shadow), 1.25px 1.25px var(--shadow), 1.75px 1.75px var(--shadow),
+    0.5px 0.5px var(--shadow), 0.25px 0.25px var(--shadow), 0.75px 0.75px var(--shadow);
   }
