--- a/client/src/profile.css
+++ b/client/src/profile.css
@@ -22,6 +22,7 @@
   }
 
   .welcome {
+    font-size: 60px;
     padding-top: 20px;
     text-align: center;
     font-family: 'Merriweather Sans', sans-serif;    
