--- a/client/src/profile.css
+++ b/client/src/profile.css
@@ -1,15 +1,71 @@
+@import url('https://fonts.googleapis.com/css2?family=Merriweather+Sans:wght@500&display=swap');
+
+
+:root {
+  --background: #E4FFF7;
+  --shadow: #34312d;
+  --text: #485696;
+}
+
 .grid-container {
     display: grid;
     grid-template-columns: auto auto;
     grid-template-rows: auto auto;
     grid-gap: 10px;
-    background-color: green;
     padding: 10px;
   }
 
   .grid-container > div {
-    background-color: rgba(255, 255, 255, 0.8);
     text-align: center;
     padding: 20px 0;
     font-size: 30px;
+  }
+
+  .welcome {
+    font-size: 60px;
+    padding-top: 20px;
+    text-align: center;
+    font-family: 'Merriweather Sans', sans-serif;    
+    color: var(--text);
+  text-shadow: 6px 6px var(--shadow),
+    5px 5px var(--shadow), 5.5px 5.5px var(--shadow), 5.25px 5.25px var(--shadow), 5.75px 5.75px var(--shadow),
+    4px 4px var(--shadow), 4.5px 4.5px var(--shadow), 4.25px 4.25px var(--shadow), 4.75px 4.75px var(--shadow),
+    3px 3px var(--shadow), 3.5px 3.5px var(--shadow), 3.25px 3.25px var(--shadow), 3.75px 3.75px var(--shadow),
+    2px 2px var(--shadow), 2.5px 2.5px var(--shadow), 2.25px 2.25px var(--shadow), 2.75px 2.75px var(--shadow),
+    1px 1px var(--shadow), 1.5px 1.5px var(--shadow), 1.25px 1.25px var(--shadow), 1.75px 1.75px var(--shadow),
+    0.5px 0.5px var(--shadow), 0.25px 0.25px var(--shadow), 0.75px 0.75px var(--shadow);
+  }
+
+  .review_head {
+    font-family: 'Merriweather Sans', sans-serif;    
+    color: silver
+  }
+
+  .text_area_review {
+    resize: none;
+    background-color: rgb(59, 56, 230);
+    border-radius: 8px;
+    border:2px solid #3b5998;
+    -webkit-box-shadow: -2px 1px 10px 0px rgba(0,0,0,0.39); 
+    box-shadow: -2px 1px 10px 0px rgba(0,0,0,0.39);
+    padding: 0.5em 0.5em 0.5em 0.5em;
+    font-family: 'Quicksand', sans-serif, white;
+    color: silver;
+    font-size:'125%';
+  }
+  .text_area_score {
+    resize: none;
+    background-color: rgb(59, 56, 230);
+    border-radius: 8px;
+    border:2px solid #3b5998;
+    -webkit-box-shadow: -2px 1px 10px 0px rgba(0,0,0,0.39); 
+    box-shadow: -2px 1px 10px 0px rgba(0,0,0,0.39);
+    font-family: 'Quicksand', sans-serif;
+    color: silver;
+    font-size:'125%';
+  }
+  .review_label {
+    font-family: 'Quicksand', sans-serif, white;
+    color: silver;
+    font-size:'250%';
   }
