--- a/client/src/profile.css
+++ b/client/src/profile.css
@@ -38,7 +38,10 @@
 
   .review_head {
     font-family: 'Merriweather Sans', sans-serif;    
-    color: silver
+    color: silver;
+    font-size: 60px;
+    padding-top: 20px;
+    text-align: center;    
   }
 
   .text_area_review {
