--- a/client/src/App.css
+++ b/client/src/App.css
@@ -21,7 +21,7 @@
   font-family: 'Material Icons' ;
   font-weight: normal;
   font-style: normal;
-  font-size: 24px;  /* Preferred icon size */
+  font-size: 50px;  /* Preferred icon size */
   display: inline-block ;
   line-height: 1;
   text-transform: none;
@@ -43,12 +43,12 @@
   font-feature-settings: 'liga';
 }
 
-/* 
+
 .App {
   padding-top: 50px;
   height: 100%;
   width: 100%;
-} */ 
+}  
 
 /* 
 .App-logo {
