--- a/client/src/profile.css
+++ b/client/src/profile.css
@@ -55,6 +55,9 @@
     font-family: 'Quicksand', sans-serif, white;
     color: silver;
     font-size:'125%';
+    display: block;
+    margin-left: auto;
+    margin-right: auto;
   }
   .text_area_score {
     resize: none;
@@ -66,9 +69,31 @@
     font-family: 'Quicksand', sans-serif;
     color: silver;
     font-size:'125%';
+    display: block;
+    margin-left: auto;
+    margin-right: auto;
   }
   .review_label {
     font-family: 'Quicksand', sans-serif, white;
     color: silver;
     font-size:'250%';
+    margin-left: auto;
+    margin-right: auto;
+  }
+
+  .perf_score {
+      margin-left: auto;
+    margin-right: auto;
+    text-align: center;
+  }
+  #submit_button {
+    margin: 0;
+    position: absolute;
+    top: 50%;
+    -ms-transform: translateY(-50%);
+    transform: translateY(-50%);
+  }
+  .submitdiv {
+    height: 200px;
+    position: relative;
   }
