fix submit button

--- a/client/src/profile.css
+++ b/client/src/profile.css
@@ -87,11 +87,10 @@
     text-align: center;
   }
   #submit_button {
-    margin: 0;
     position: absolute;
+    left: 50%;
     top: 50%;
-    -ms-transform: translateY(-50%);
-    transform: translateY(-50%);
+    transform: translate(-50%, -50%);
   }
   .submitdiv {
     height: 200px;
