--- a/client/src/App.css
+++ b/client/src/App.css
@@ -14,7 +14,7 @@
       }
 
 
-
+      
 
 
 .material-icons {
@@ -42,13 +42,12 @@
   /* Support for IE. */
   font-feature-settings: 'liga';
 }
-
-/* 
+ 
 .App {
   padding-top: 50px;
   height: 100%;
   width: 100%;
-} */ 
+} 
 
 /* 
 .App-logo {
